# dogcode-memory

./: .gitignore  README.md  pyproject.toml
src/dogcode_memory/: __init__.py  adapter.py  async_ops.py  config.py  deduplicator.py  extractor.py  format.py  hooks.py  index.py  injector.py  lifecycle.py  merge.py  monkey_patch.py  pipeline.py  registry.py  retriever.py  schema.py  store.py  updater.py
src/dogcode_memory/api/: __init__.py  routes.py  server.py
src/dogcode_memory/context/: __init__.py  archiver.py  compression_enhanced.py  restorer.py  summary_cache.py
src/dogcode_memory/schemas/: errors.yaml  patterns.yaml  preferences.yaml  profile.yaml  project.yaml  tools.yaml
