[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dogcode-memory"
version = "0.1.0"
description = "Memory module for DogCode - cross-session knowledge persistence"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dogcode_memory"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
